# fastapi-boilerplate

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run
app/: conftest.py  main.py  middlewares.py
app/auth/: api.py  conftest.py  deps.py  emails.py  exceptions.py  models.py  schemas.py
app/auth/oauth2/: __init__.py  base.py  exceptions.py  google.py
app/auth/tests/: factories.py  test_api.py  test_deps.py
app/core/: api.py  cache.py  config.py  deps.py  exceptions.py  gunicorn_conf.py  limiter.py  schemas.py  translation.py
app/core/tests/: async_factory.py  factories.py
app/utils/: download.py  emails.py  geolocation.py  keys.py  security.py
locale/: messages.pot
locale/en/LC_MESSAGES/: messages.po
locale/tr/LC_MESSAGES/: messages.po
migrations/models/: 0_20230216121938_init.py
scripts/: compile-emails.sh  entrypoint.sh  format.sh  initial_data.py  start-local.sh  start.sh  test.sh  update-messages.sh  wait_for_db.py
templates/email/src/: email-verification.mjml  password-reset.mjml
